Fixed layout on Twitter components (#51)
Fixed issue with image not showing up.

--- a/src/styles/components/_media-object__twitter.scss
+++ b/src/styles/components/_media-object__twitter.scss
@@ -1,40 +1,29 @@
 .media-object-twitter {
-  display: inline-grid;
+  display: grid;
   grid-template-columns: 1fr 3fr;
-  max-width: 42%;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  margin-left:0;
-
-  .tw-user-handle {
-    padding-left: 10px;
-  }
+  margin-bottom: 40px;
 
   .tw-user {
-    // padding: 20px;
+    padding: 20px;
     display: grid;
     grid-template-columns: 1fr 2fr;
     justify-content: center;
 
-    &-img-contain {
+    &-img-contain{
       width: 50px;
       height: 50px;
       overflow: hidden;
-      background-image: url('/assets/images/meTest.jpg');
-      background-size: cover;
     }
 
     &-details {
       display: flex;
       flex-direction: column;
-      // padding: 10px;
-      padding-left: 0;
+      padding: 0 10px;
     }
 
     &-name {
       font-weight: bold;
       padding-bottom: 5px;
-      padding-left: 10px;
       white-space: nowrap;
     }
     
@@ -45,34 +34,27 @@
   }
 
   .tw-follow {
-    // padding: 15px 20px;
+    padding: 15px 20px;
     justify-self: end;
 
     a {
       text-decoration: none;
     }
     
-    .twitterFollowBtn {
+    .twitterFollowBtn{
         width: 20px;
      }
   }
 
   .tw-message {
     padding: 0 20px;
-    padding-top: 15px;
-    padding-bottom: 0;
     grid-column: span 2;
-    padding-left: 0;
     font-weight: bold;
   }
 
   .tw-posted-on {
     color: $medGray;
     padding: 15px 20px 10px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 0;
-    padding-right: 0;
     font-weight: bold;
     font-size: 0.85rem;
     grid-column: span 2;
@@ -88,39 +70,18 @@
   }
 
   .tw-action {
-    // padding: 10px 20px 10px 0;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 20px;
-    padding-left: 0;
+    padding: 10px 20px 10px 0;
     grid-column: span 2;
     font-size: 1.2rem;
 
-    & > span {
+    & > span{
       padding: 0 20px;
       color: $medGray;
 
-      span {
+      span{
         color: $red;
         font-weight: bold;
       }
     }
   }
-}
-
-
-
-
-
-.media-object-twitter:last-child {
-  margin-left: 70px;
-  margin-right: 0;
-}
-
-.media-object-twitter:nth-child(odd) {
-  margin-right: 70px;
-}
-
-.twitter-news {
-  width:100%;
 }
